# src/main/java/com/thbs/studentRegistry/controller/StudentController.java
@@ -1,44 +1,55 @@
 package com.thbs.studentRegistry.controller;
 import com.thbs.studentRegistry.entity.Student;
+import com.thbs.studentRegistry.exception.StudentNotFoundException;
 import com.thbs.studentRegistry.service.StudentService;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import java.util.List;
+import java.util.Optional;
 
 @RestController
+@CrossOrigin
 @RequestMapping(path = "/studentApi")
 public class StudentController {
     @Autowired
     StudentService studentService;
 
-    //This function is used fetch All Students data
-    @GetMapping(path="/fetchStudents",produces = "application/json")
-    public List<Student> fetchAllStudents(){
-        return studentService.findAll();
+    private final Logger LOG = LoggerFactory.getLogger(this.getClass());
+
+    @GetMapping(path="/getAllStudents",produces = "application/json")
+    public ResponseEntity getAllStudents(){
+       LOG.info("studentList");
+        return ResponseEntity.status(HttpStatus.OK).body(studentService.findAll());
     }
 
-    // This function is used to save  the student
+
+
     @PostMapping(path = "/addStudent",produces = "application/json" ,consumes = "application/json")
-    public Student addStudent(@RequestBody Student student){
-        return studentService.save(student);
+    public ResponseEntity<Student> addStudent(@RequestBody Student student){
+        LOG.info("student added successfully");
+        return ResponseEntity.status(HttpStatus.OK).body(studentService.save(student));
     }
 
-    //This function is used to fetch student data by id
+
     @GetMapping(path = "/getStudentById/{studentId}")
-    public Student getStudentById(@PathVariable("studentId") Long studentId){
-        return studentService.findById(studentId).orElse(null);
+    public ResponseEntity<Student> getStudentById(@PathVariable("studentId") Long studentId){
+        return new ResponseEntity<Student>(studentService.findById(studentId), HttpStatus.OK);
     }
 
-    //This function is used to update the student data
+
     @PutMapping(path = "/updateStudentById/{studentId}")
-    public Student updateStudentById(@PathVariable("studentId") Long studentId,@RequestBody Student student){
-        return studentService.save(student);
+    public ResponseEntity<Student> updateStudentById(@PathVariable("studentId") Long studentId,@RequestBody Student student){
+        return new ResponseEntity<Student>(studentService.update(student),HttpStatus.OK);
     }
 
-    //This function is used to delete student data by id
+
     @DeleteMapping(path = "/deleteStudentById/{studentId}")
-    public String deleteStudentById(@PathVariable("studentId") Long studentId){
+    public ResponseEntity<String> deleteStudentById(@PathVariable("studentId") Long studentId){
         studentService.deleteById(studentId);
-        return "StudentId "+studentId+" is deleted";
+        return new ResponseEntity<String>("StudentId "+studentId+" is deleted",HttpStatus.OK);
     }
 }
